--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-blog-awesome"]
 	path = themes/hugo-blog-awesome
 	url = https://github.com/hugo-sid/hugo-blog-awesome.git
+[submodule "public"]
+	path = public
+	url = https://github.com/mannekeenpis/mannekeenpis.github.io.git
